[package]
name = "agdr"
version = "1.8.1"
edition = "2021"
license = "Apache-2.0 OR CC0-1.0"
repository = "https://github.com/aiccountability-source/AgDR-Phoenix"
readme = "README.md"
description = "Atomic Kernel Inference SDK for Phoenix v1.8 Ultra"
homepage = "https://www.accountability.ai"
authors = ["Genesis Glass Foundation <founding@accountability.ai>"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = { version = "1.5", features = ["rayon", "std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bincode = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
