[package]
name = "agdr-aki"
version = "1.8.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR CC0-1.0"
repository = "https://github.com/aiccountability-source/AgDR-Phoenix"
documentation = "https://docs.rs/agdr-aki"
readme = "README.md"
description = "Atomic Kernel Inference SDK for cryptographically-sealed, court-admissible AI decision records"
homepage = "https://accountability.ai"
authors = ["Genesis Glass Foundation <founding@accountability.ai>"]
keywords = ["accountability", "ai", "cryptographic", "audit", "compliance"]
categories = ["cryptography", "development-tools", "science"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[lib]
name = "agdr_aki"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
blake3 = { version = "1.5", features = ["rayon", "std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]