[project]
name = "agdr-aki"
version = "1.8.0"
description = "Atomic Kernel Inference SDK for Phoenix v1.8 Ultra"
authors = [{ name = "Genesis Glass Foundation", email = "founding@accountability.ai" }]
license = { text = "Apache-2.0 OR CC0-1.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[tool.maturin]
bindings = "pyo3"
python-source = "agdr-aki"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"
