[project]
name = "agdr-aki"
version = "1.8.3"                  # Bump to a patch version for the update
description = "AgDR-AKI: Sub-microsecond AI accountability SDK. Court-admissible forensic records (PPP Triplet) with cryptographic proof for regulated AI (EU AI Act, Canada Evidence Act)."
authors = [{ name = "Genesis Glass Foundation", email = "founding@accountability.ai" }]
license = { text = "Apache-2.0 OR CC0-1.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

keywords = [
    "ai-accountability",
    "ai-governance",
    "forensic-logging",
    "deterministic-ai",
    "eu-ai-act",
    "canada-compliance",
    "cryptographic-audit",
    "ppp-triplet",
    "court-admissible",
    "provenance-place-purpose",
    "zero-latency",
    "kernel-inference",
    "agdr",
    "aki",
    "rust-python"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

[tool.maturin]
bindings = "pyo3"
module-name = "agdr_aki"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"
